force-app/main/default/objects/Funding_Code__c/Funding_Code__c.object-meta.xml
<CustomObject>
    <description>PSFT funding code related to a Reimbursement Item.</description>
    <label>Funding Code</label>
    <nameField>
        <label>VTM Funding Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>