force-app/main/default/objects/Funding_Code__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Captures whether a funding code is active in VTM.</description>
    <inlineHelpText>Is this funding code being actively used by one of AARP&#39;s Volunteer Programs?</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>