force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Activity__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Activity__c</fullName>
    <description>Equivalent to the ACTIVITY_DESCR value used by PeopleSoft.</description>
    <inlineHelpText>Enter the ACTIVITY_DESCR value found in PeopleSoft for this funding code.</inlineHelpText>
    <label>PeopleSoft Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>