force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Activity_Code__c</fullName>
    <description>Equivalent to the ACTIVITY_ID value used by PeopleSoft.</description>
    <inlineHelpText>Enter the ACTIVITY_ID value found in PeopleSoft for this funding code.</inlineHelpText>
    <label>PeopleSoft Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>