force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Fund__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Fund__c</fullName>
    <description>Concatenation of PROJ_BU_DESCR, PROJECT_DESCR, ACTIVITY_DESCR, and FUND_CODE_DESCR, values used by PeopleSoft.</description>
    <inlineHelpText>Enter the concatenation of values that create a funding/grant description in PeopleSoft.</inlineHelpText>
    <label>PeopleSoft Funding Descriptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>