force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Fund_Code__c</fullName>
    <description>Concatenation of PROJ_BU, PROJECT_ID, ACTIVITY_ID, and FUND_CODE values used by PeopleSoft.</description>
    <inlineHelpText>Enter the concatenation of values that create a funding/grant code in PeopleSoft.</inlineHelpText>
    <label>PeopleSoft Funding Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>