force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Project__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Project__c</fullName>
    <description>Equivalent to PROJECT_DESCR used by PeopleSoft.</description>
    <inlineHelpText>Enter the PROJECT_DESCR value found in PeopleSoft for this funding code.</inlineHelpText>
    <label>PeopleSoft Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>