force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Project_Business__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Project_Business__c</fullName>
    <description>Equivalent to PROJ_BU_DESCR used by PeopleSoft.</description>
    <inlineHelpText>Enter the PROJ_BU_DESCR found in PeopleSoft for this funding code.</inlineHelpText>
    <label>PeopleSoft Project Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>