force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Project_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Project_Business_Code__c</fullName>
    <description>Equivalent to PROJ_BU used by PeopleSoft.</description>
    <inlineHelpText>Enter the PROJ_BU code found in PeopleSoft for this funding code.</inlineHelpText>
    <label>PeopleSoft Project Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>