force-app/main/default/objects/Funding_Code__c/fields/PeopleSoft_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Project_Code__c</fullName>
    <description>Equivalent to PROJECT_ID used by PeopleSoft.</description>
    <inlineHelpText>Enter the PROJECT_ID value found in PeopleSoft for this funding code.</inlineHelpText>
    <label>PeopleSoft Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>