force-app/main/default/objects/Funding_Code__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the Enterprise Level Program that uses this funding code.</description>
    <inlineHelpText>Search for and select the Enterprise Level Program that uses this funding code.</inlineHelpText>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program__c.Enterprise_Level_Program__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Funding Codes</relationshipLabel>
    <relationshipName>Funding_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>