force-app/main/default/objects/Funding_Code__c/fields/VTM_Activity__c.field-meta.xml
<CustomField>
    <fullName>VTM_Activity__c</fullName>
    <description>Captures the volunteer-friendly activity verbiage. Aligns with PeopleSoft Activity.</description>
    <label>Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>