force-app/main/default/objects/Funding_Code__c/fields/VTM_Fund__c.field-meta.xml
<CustomField>
    <fullName>VTM_Fund__c</fullName>
    <description>Captures the volunteer-friendly Fund verbiage. Aligns with PeopleSoft Fund.</description>
    <label>Fund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>