force-app/main/default/objects/Funding_Code__c/fields/VTM_Project__c.field-meta.xml
<CustomField>
    <fullName>VTM_Project__c</fullName>
    <description>Captures the volunteer-friendly project verbiage. Aligns with PeopleSoft Project.</description>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>