force-app/main/default/objects/Funding_Code__c/fields/VTM_Project_Business__c.field-meta.xml
<CustomField>
    <fullName>VTM_Project_Business__c</fullName>
    <description>Captures the volunteer-friendly project business verbiage. Aligns with PeopleSoft Project Business.</description>
    <label>Project Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>