force-app/main/default/objects/Funding_Code__c/listViews/Active_Tax_Aide.listView-meta.xml
<ListView>
    <fullName>Active_Tax_Aide</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Tax-Aide</value>
    </filters>
    <label>Active Tax Aide</label>
    <sharedTo>
        <role>VTM_Manager</role>
    </sharedTo>
</ListView>