force-app/main/default/objects/Funding_Code__c/listViews/All_Active_Funding_Codes.listView-meta.xml
<ListView>
    <fullName>All_Active_Funding_Codes</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Is_Active__c</columns>
    <columns>VTM_Fund__c</columns>
    <columns>VTM_Activity__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Funding Codes</label>
</ListView>